# HTTP_Messenger_Server

./: .gitignore  AnswerContainer.cpp  AnswerContainer.h  AnswerContainerInterface.cpp  AnswerContainerInterface.h  CMakeLists.txt  HandlerRequest.cpp  HandlerRequest.h  HandlerRequest.hpp  HandlerRequest_listener.cpp  HandlerRequest_requests.cpp  IDatabase.h  IRequests.cpp  IRequests.h  Jenkinsfile  MSSQLDatabase.cpp  MSSQLDatabase.h  Main.cpp  README.md  StringUtils.cpp  StringUtils.h  ThreadWorker.cpp  ThreadWorker.h  main.cpp  server.iss  stringtowstring.cpp  stringtowstring.h
Database/: ConfigFile.cpp  ConfigFile.h  IDatabase.h  MSSQLDatabase.cpp  MSSQLDatabase.h
Database/Exception/: QueryException.cpp  QueryException.h
Database/Models/: Chat.cpp  Chat.h  Message.cpp  Message.h  User.cpp  User.h
Database/Security/: ICryptHash.h  IHash.h  SHA256.cpp  SHA256.h  SHA256Crypt.cpp  SHA256Crypt.h  TokenGenerator.cpp  TokenGenerator.h
IRequests/: IRequests.cpp  IRequests.h  RequestAddUserToTheChat.cpp  RequestAddUserToTheChat.cpp.h  RequestAddUserToTheChat.h  RequestChangeLogin.cpp  RequestChangeLogin.h  RequestChangePassword.cpp  RequestChangePassword.h  RequestCreateNewChat.cpp  RequestCreateNewChat.h  RequestFindUsers.cpp  RequestFindUsers.h  RequestGetChatParticipants.cpp  RequestGetChatParticipants.h  RequestGetChats.cpp  RequestGetChats.h  RequestGetMessages.cpp  RequestGetMessages.h  RequestGetUserChats.cpp  RequestGetUserChats.h  RequestJoinToTheChat.cpp  RequestJoinToTheChat.h  RequestLeaveChat.cpp  RequestLeaveChat.h  RequestLogin.cpp  RequestLogin.h  RequestLogout.cpp  RequestLogout.h  RequestSendMessages.cpp  RequestSendMessages.h  RequestSignUp.cpp  RequestSignUp.h
IRequests/Chat/: RequestAddUserToTheChat.cpp  RequestAddUserToTheChat.h  RequestChangeChatName.cpp  RequestChangeChatName.h  RequestCreateNewChat.cpp  RequestCreateNewChat.h  RequestGetChatParticipants.cpp  RequestGetChatParticipants.h  RequestLeaveChat.cpp  RequestLeaveChat.h  RequestUpdateChatImage.cpp  RequestUpdateChatImage.h
IRequests/Messages/: RequestGetMessages.cpp  RequestGetMessages.h  RequestSendMessages.cpp  RequestSendMessages.h
IRequests/User/: RequestChangeLogin.cpp  RequestChangeLogin.h  RequestChangePassword.cpp  RequestChangePassword.h  RequestCheckTimeSession.cpp  RequestCheckTimeSession.h  RequestDeleteUser.cpp  RequestDeleteUser.h  RequestFindUsers.cpp  RequestFindUsers.h  RequestGetUserChats.cpp  RequestGetUserChats.h  RequestLogin.cpp  RequestLogin.h  RequestLogout.cpp  RequestLogout.h  RequestSignUp.cpp  RequestSignUp.h  RequestUpdateUserImage.cpp  RequestUpdateUserImage.h
Service/: ServiceController.cpp  ServiceController.h  ServiceStarter.cpp  ServiceStarter.h
integration tests/: CMakeLists.txt.in  TestHandlerRequest.h
model/: Chat.cpp  Chat.h  Message.cpp  Message.h  User.cpp  User.h
unit tests/: CMakeLists.txt
